...
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:background="@drawable/task_card_background">


    <TextView
        android:id="@+id/Titre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/montserrat_bold"
...
