...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/pagerTasksHome"
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:layout_marginTop="4dp"
                    android:paddingHorizontal="46dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
...
